# faqchatbot

./: .dockerignore  .env.example  .gitignore  .pytest-watch.ini  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  faq.txt  main.py  pyproject.toml
app/: __init__.py  __main__.py  cli.py  config.py  logging.py
app/domain/: __init__.py  answer_response.py  chat_response.py  faq.py  prompt_template.py  retrieval_result.py
app/infrastructure/: __init__.py  ollama_client.py  qdrant_client.py
app/repositories/: __init__.py  faq_repository.py
app/services/: __init__.py  answer_generator.py  chat_service.py  ingestion_service.py  (+2 more)
data/: faq.json
docs/: ARTIFACT-INDEX.md  EXPERT-REVIEW.md  IMPLEMENTATION-PLAN.md  IMPROVEMENT-PLAN.md  MODULES.md  PHASE4-IMPLEMENTATION.md  PHASE4-INTEGRATION-REPORT.md  PHASE4-VERIFICATION.md  PHASE5-IMPLEMENTATION.md  PHASE5-SUMMARY.md  PHASE5-VERIFICATION.md  PHASE6-IMPLEMENTATION.md  PHASE6-SUMMARY.md  PHASE6-VERIFICATION.md  PROJECT-DEFINITION.md  QA-DELIVERY.md  README.md  RUNTIME-DEPLOYMENT.md
scripts/: evaluate_rag.py  ingest.py  pull_host_ollama_models.sh
tests/: conftest.py  test_answer_generation_integration.py  test_answer_generator.py  test_chat_service.py  test_chat_service_integration.py  test_cli.py  test_config.py  test_faq_domain.py  test_faq_repository.py  test_ingest_script.py  test_ingestion_service.py  test_logging.py  test_ollama_client.py  test_qdrant_client.py  test_retrieval_integration.py  test_retriever.py  test_runtime_assets.py  test_smoke_chat_flow.py  test_ui.py
(+25 files in other folders)
