[project]
name = "faqchatbot"
version = "0.1.0"
description = "Local terminal-based FAQ chatbot scaffold"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.28.1",
    "textual>=3.0.0",
]

[project.scripts]
faqchatbot = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true
